# torch_curriculum

./: .coverage  .env  README.md  main.py  pyproject.toml  smoke_test.py
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md  copilot-instructions.md.instructions.md
architecture_decisions/: TOOL_PLAN_sequence_completer.md
scripts/: run_d04.sh  run_d04_full_data.sh  run_d04_tiny_data.sh
src/torch_playground/: 00_linear_projection.py  app_demo.py  build_tokenizer.py  d00_linear_projection.py  d01_linear_trainable.py  d02_linear_multilayer.py  d03_basic_transformer.py  d04_name_seq_learner.py  d05_deep_ocr.py  name_seq_completer.py  tokenizer.py  util.py
tests/: test_00_linear_projection.py  test_batch_mode.py  test_build_tokenizer.py  test_d00_linear_projection.py  test_d01_linear_trainable.py  test_d02_linear_multilayer.py  test_d03_basic_transformer.py  test_d04_name_seq_learner.py  test_integration_d00.py  test_integration_d01.py  test_integration_d02.py  test_integration_d03.py  test_integration_d04.py  test_integration_name_seq_completer.py  test_name_seq_completer.py  test_tokenizer.py  test_util.py
