[project]
name = "torch-playground"
version = "0.1.0"
description = "Workspace for learning (refreshing) PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "keyring>=25.6.0",
    "numpy<2",
    "pytest>=8.4.1",
    "torch<2.3",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "src"
