[project]
name = "torch_playground"
version = "0.1.0"
description = "Workspace for learning (refreshing) PyTorch"
readme = "README.md"
authors = [
    { name = "Heather Lane", email = "heather@illation.net" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "keyring>=25.6.0",
    "numpy<2",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "torch<2.3",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "src"
